# axum-rs-api

./: .env.example  .gitignore  AXUM-RS-API.postman_collection.json  Cargo.toml  README.md
migrations/: 20250320_create_tasks_table.sql
src/: db.rs  error.rs  handlers.rs  main.rs
src/handlers/: task_handler.rs
src/models/: task_model.rs
src/services/: task_service.rs
