[package]
name = "axum-rs-api"
version = "0.1.0"
edition = "2024"

[dependencies]
#axum
axum = "0.7.4"
tokio = { version = "1.44.1", features = ["full"] }

#serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

#postgres
#sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"]}
tokio-postgres = { version = "0.7.13"}
bb8 = "0.9.0"
bb8-postgres = "0.9.0"

#env
dotenv = "0.15.0"

#validator
validator = { version = "0.20.0", features = ["derive"] }
validator_derive = "0.20.0"

#tower
tower-http = { version = "0.6.2", features = ["cors"] }





